[metadata]
name = py_plan
author = Christopher J. MacLellan
author-email = maclellan.christopher@gmail.com
summary = A library of propositional and relational planning algorithms.
description-file = README.rst
description-content-type = text/x-rst; charset=UTF-8
home-page = https://pypi.python.org/pypi/py_plan/
project_urls = 
    Source Code = https://github.com/cmaclell/py_plan
license = MIT
license_file = LICENSE.txt
classifier =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Artificial Intelligence
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: PyPy

[files]
package =
    py_plan

[bdist_wheel]
universal=1
